# mr-kg

./: .env.development  .env.production  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  DATA.md  DEPLOYMENT.md  DEV.md  DOCKER.md  LICENSE  Makefile  README.md  TESTING.md  TODO.org  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
api/: Dockerfile  README.md  justfile  pyproject.toml
api/app/: __init__.py  config.py  database.py  main.py  models.py
api/app/repositories/: __init__.py  evidence_profile.py  statistics.py  trait_profile.py  vector_store.py
api/app/routers/: __init__.py  similar.py  studies.py
api/tests/: __init__.py  conftest.py  test_similar.py  test_studies.py
backend/: .dockerignore  .env.example  API_INFRASTRUCTURE.md  DATABASE_INTEGRATION.md  Dockerfile  Dockerfile.dev  README.md  coverage.xml  justfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  core.py  health.py  similarities.py  studies.py  system.py  traits.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  error_handlers.py  exceptions.py  middleware.py  schema_validation.py
backend/app/models/: database.py  responses.py
backend/app/services/: database_service.py  repositories.py
backend/notebooks/: api_demo.ipynb
backend/tests/: test_api_infrastructure.py  test_core_api.py  test_database_integration.py  test_health.py  test_health_comprehensive.py  test_similarities_comprehensive.py  test_studies_comprehensive.py  test_studies_similarities_api.py  test_system_api.py  test_traits_api.py
data/: .gitignore  README.md
processing/: README.md  environment.yml  justfile  pyproject.toml
processing/config/: case_studies.yml
processing/docs/: databases.md  db_schema.md  trait-profile-similarity.md  trait-similarity.md
processing/notebooks/: 1-mr-literature.ipynb  2-mr-kg.ipynb  3-mr-kg-focused.ipynb
processing/scripts/: README.md  TRAIT_SIMILARITY_README.md  aggregate-embeddings.py  aggregate-trait-similarities.py  build-vector-store.py  collect-traits.py  compute-trait-similarity.py  database_schema.py  demo-vector-store.py  embed-efo.py  embed-traits.py  embed.py  preprocess-efo.py  preprocess-traits.py  query-vector-store.py  sanity.py  test-concurrent-connections.py  validate-database.py
processing/scripts/analysis/: analyze-evidence-data-quality.py  analyze-evidence-summary-stats.py  analyze-evidence-trait-comparison.py  analyze-evidence-validation.py  analyze-match-type-quality.py  analyze-trait-summary-stats.py  case_study_1_evaluate_eras.py  case_study_1_extract_pairs.py  case_study_1_extract_pairs_similarity_expanded.py  case_study_1_fig_category_concordance_violin.py  case_study_1_fig_category_tier_distribution.py  case_study_1_fig_concordance_heatmap.py  case_study_1_fig_match_type_stacked.py  case_study_1_fig_regression_diagnostics.py  case_study_1_fig_study_count_box_plot.py  case_study_1_fig_study_count_scatter.py  case_study_1_fig_study_count_stacked_histograms.py  case_study_1_fig_study_count_violin.py  case_study_1_fig_study_count_visualizations.py  case_study_1_fig_temporal_era.py  case_study_1_fig_tier_distribution.py  case_study_1_interaction_category_match.py  case_study_1_interaction_era_category.py  case_study_1_interaction_era_dummies.py  case_study_1_manuscript_figures.py  case_study_1_ordinal_trend_test.py  case_study_1_reproducibility_metrics.py  case_study_1_temporal_model.py  case_study_1_validation_examples.py  case_study_2_concordance_overlay.py  case_study_2_hotspot_profiles.py  case_study_2_network_analysis.py  case_study_2_prepare_profiles.py  case_study_5_evidence_consistency.py  case_study_5_fashionable_traits.py  case_study_5_manuscript_figures.py  case_study_5_pleiotropy_awareness.py  case_study_5_reporting_completeness.py  case_study_5_temporal_preparation.py  case_study_5_trait_diversity.py  (+11 more)
processing/scripts/bc4/: compute-evidence-similarity-lite.sbatch  compute-evidence-similarity.sbatch  compute-trait-similarity.sbatch  embed-efo.sbatch  embed-traits.sbatch  embed.sbatch
processing/scripts/bp1/: embed.sbatch
processing/scripts/evidence-profile/: aggregate-evidence-similarities.py  analyze-alternative-metrics.py  analyze-efo-matching-failure-lite.py  analyze-efo-matching-failure.py  build-evidence-profile-database.py  compute-evidence-similarity.py  debug-single-combination.py  diagnose-pvalue-parsing.py  monitor-preprocessing.sh  preprocess-evidence-profiles.py  test-fuzzy-matching.py
processing/scripts/main-db/: build-main-database.py  validate-database.py
processing/scripts/main-processing/: aggregate-embeddings.py  embed-traits.py  preprocess-traits.py
processing/scripts/postprocessing/: describe-db.py  generate-schema-docs.py
processing/scripts/trait-profile/: aggregate-trait-similarities.py  build-trait-profile-database.py  compute-trait-similarity.py
processing/tests/: test_case_study_1.py  test_case_study_2_network.py  test_case_study_5.py  test_evidence_profile.py
src/common_funcs/: README.md  justfile  main.py  pyproject.toml
src/common_funcs/common_funcs/: __init__.py
webapp/: .dockerignore  DOCKER.md  Dockerfile  README.md  app.py  config.py  justfile  pyproject.toml
webapp/.streamlit/: config.toml
webapp/app/: __init__.py  app.py
webapp/app/funcs/: __init__.py  utils.py
webapp/app/pages/: __init__.py  about.py  model_analysis.py  trait_similarities.py
webapp/app/resources/: database.py
webapp/components/: __init__.py  model_selector.py  similarity_display.py  study_table.py  theme.py
webapp/funcs/: utils.py
webapp/pages/: 1_Search_by_Trait.py  2_Search_by_Study.py  3_Study_Info.py  4_Info.py  __init__.py  about.py  explore_results.py  explore_traits.py  model_analysis.py  trait_similarities.py
webapp/resources/: __init__.py  database.py
webapp/services/: __init__.py  api_client.py  db_client.py
webapp/tests/: __init__.py  conftest.py  test_api_client.py  test_components.py  test_db_client.py
webapp/utils/: describe_db.py
(+143 files in other folders)
