[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for MR-KG web services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "duckdb>=1.3.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 79
