[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common-funcs",
    "duckdb>=1.3.2",
    "pandas>=2.3.1",
    "scispacy>=0.5.5",
    "yiutils",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.uv.sources]
common-funcs = { path = "../src/common_funcs" }
yiutils = { path = "../src/yiutils" }
