[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common_funcs",
    "duckdb>=1.3.2",
    "pandas>=2.3.1",
    "scispacy>=0.5.5",
    "yiutils",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.uv.sources]
common_funcs = { path = "../src/common_funcs", editable = true }
yiutils = { path = "../src/yiutils", editable = true }
