[project]
name = "webapp"
version = "0.1.0"
description = "Streamlit webapp for MR-KG web services"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "duckdb>=1.3.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "watchdog>=6.0.0",
    "common_funcs",
]

[tool.uv.sources]
common_funcs = { path = "../src/common_funcs", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 79
